<resources>
    <string name="app_name">UAS_DendiYanaPermadi</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Login">Log In</string>
    <string name="Sign_In">Sign IN</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_activity_main3">MainActivity</string>
</resources>